--- a/style.css
+++ b/style.css
@@ -75,3 +75,19 @@ main section h5 {
     padding: 15px; 
 
 }
+
+#btn-show {
+  display: block;
+  background-color: coral;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.box-display {
+  display: none;
+  background-color: coral;
+  padding: 20px;
+}
